# stapel-social

./: CHANGELOG.md  CONFIG.MD  MODULE.md  README.md  __init__.py  apps.py  conftest.py  preset.py  pyproject.toml
.github/workflows/: publish.yml
docs/: capabilities.json
tests/: test_composite.py
