[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-social"
version = "0.1.3"
description = "Composite: social surface — chat + profiles + reviews"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "social", "composite", "chat", "profiles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# A composite introduces NO versions of its own — it pins the same ranges the
# STAPEL_LIBS registry / each member lib already uses, fixing the combination.
dependencies = [
    "stapel-core>=0.10,<1.0",
    "stapel-chat>=0.1,<0.2",
    "stapel-profiles>=0.3,<0.5",
    "stapel-reviews>=0.1,<0.2",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-social"
Repository = "https://github.com/usestapel/stapel-social"
Documentation = "https://github.com/usestapel/stapel-social#readme"
Changelog = "https://github.com/usestapel/stapel-social/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-social/issues"

[project.optional-dependencies]
all = []

[tool.setuptools]
package-dir = {"stapel_social" = "."}
packages = ["stapel_social", "stapel_social.tests"]

[tool.setuptools.package-data]
stapel_social = ["py.typed"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
